or EXTLINUX apply to that specific program only; other changes apply
to all derivatives.

Changes in 4.05:
	* HDT updated, and now supports uploading data to a TFTP
	  server.
	* ISOLINUX: remove the .img file support; it has been broken
	  on virtually all systems since the beginning, and has been
	  totally broken since 4.00 at least.  Use MEMDISK instead.

Changes in 4.04:
	* PXELINUX: Fix handling of unqualified DNS names.
	* PXELINUX: Fix timer bug when PXELINUX might be unloaded
	  (Gene Cumm).
	* core/writedec.inc: Fix duplicate declaration and overflow
	  (Gene Cumm).
	* GCC 4.5 fixes.
	* sample directory: Fix Makefile include (Gene Cumm).
	* ver.com: New universal DOS/COMBOOT application to display
	  version information (includes DRMK) (Gene Cumm).
	* rosh.c32: updated; Using getopt() for internal commands to aid
	  parsing options; Fix bugs in ls; add warm reboot and echo
	  (Gene Cumm).
	* com32: fix a file descriptor leak.
	* gfxboot.c32: handle TEXT..ENDTEXT; error out on no LABELs
	  found (Sebastian Herbszt).
	* Fix booting on non-partitioned devices.
	* MBR, isohybrid: Workaround for a BIOS issue on Acer
	  Travelmate and possibly other machines.
        * COM32: Adding ACPI parsing libary
        * HDT: Release 0.4.1 to support ACPI parsing, 
          improved mutli-core/cpu reporting 
	* LUA: Updating to 5.1.4-2
	* SYSLINUX: core/diskstart.inc: Reset DS after checksum in case
	  it isn't 0 (Gene Cumm).
	* win64: Script update for additional mingw compiler names
	  (Gene Cumm).
	* diag: New directory for diagnostic-related tools.  Add a
	  handoff MBR/VBR and geometry display images (Gene Cumm).
	* MEMDISK: use "mem=" parameter to mark available memory above
	  this point as reserved (core already does alignment) (Gene Cumm).
	* MEMDISK: Additional disk probe checks and debug output
	  (Shao Miller, Gene Cumm).
	* gpxe: add gpxelinuxk.0, based off of undionly.kpxe + new
	  script (Gene Cumm).