@@ -8,6 +8,7 @@ Changes in 4.05:
 	* ISOLINUX: remove the .img file support; it has been broken
 	  on virtually all systems since the beginning, and has been
 	  totally broken since 4.00 at least.  Use MEMDISK instead.
+	* chain.c32: Support chaining ReactOS' FreeLdr (Shao Miller)
 
 Changes in 4.04:
 	* PXELINUX: Fix handling of unqualified DNS names.
